--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.coolweather.android">
-  <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:networkSecurityConfig="@xml/network_security_config"
         android:name="org.litepal.LitePalApplication"
-        android:theme="@style/AppTheme"
-        android:supportsRtl="true"
+        android:allowBackup="true"
         android:label="@string/app_name"
-        android:allowBackup="true">
-        <activity
-        android:name=".MainActivity">
-        <intent-filter><action android:name="android.intent.action.MAIN"/>
-            <category android:name="android.intent.category.LAUNCHER"/>
-        </intent-filter></activity>
-    </application></manifest>
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
+        <activity android:name=".WeatherActivity"></activity>
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+    </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+</manifest>
