--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,15 @@
     package="com.coolweather.android">
 
     <application
-        android:networkSecurityConfig="@xml/network_security_config"
         android:name="org.litepal.LitePalApplication"
         android:allowBackup="true"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".WeatherActivity"></activity>
+        <activity android:name=".WeatherActivity" />
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +19,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service
+            android:name=".serive.AutoUpdateService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
